# internal/models/user.go
@@ -1,9 +1,19 @@
 package models
 
-import "time"
+import (
+	"time"
+	"github.com/google/uuid"
+)
 
 type User struct {
-	ID        string    `db:"id"`
-	Name      string    `db:"name"`
-	CreatedAt time.Time `db:"created_at"`
+	ID        uuid.UUID `db:"id" json:"id"`
+	Name      string    `db:"name" json:"name"`
+	CreatedAt time.Time `db:"created_at" json:"created_at"`
+}
+
+type UserWithWallet struct {
+	ID        uuid.UUID `json:"id"`
+	Name      string    `json:"name"`
+	Wallet    Wallet    `json:"wallet"`
+	CreatedAt time.Time `json:"created_at"`
 }
